# openuser

./: .bumpversion.cfg  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.original  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  alembic.ini  deploy.sh  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.docker.txt  requirements.txt
.claude/: config.json
.claude-memory/: context.json  environment.json  errors.json  iterations.md  lessons-learned.md
.claude-memory/decisions/: 002-ai-project-infrastructure-upgrade.md
.claude/agents/: doc-agent.md  test-agent.md
.claude/hooks/: settings.json
.claude/scripts/: maintain.sh  search-feature.sh  update-registry.sh
.github/: changelog-config.json
.github/workflows/: cd.yml  ci.yml  code-quality.yml  performance.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: .gitkeep
docs/: ACTION_PLAN.md  DEVELOPER_GUIDE.md  FINAL_REPORT.md  INDEX.md  UPGRADE_SUMMARY.md  USER_GUIDE.md
docs/api/: INDEX.md  voice-synthesis.md
docs/deployment/: CICD.md  DOCKER.md  HELM.md  INDEX.md  KUBERNETES.md  MONITORING.md
docs/integrations/: FEISHU.md  WECHAT.md
docs/modules/: REGISTRY.md  SELF_EVOLVING_AGENT.md
docs/testing/: API_CONTRACT_TESTS.md  E2E_IMPLEMENTATION_SUMMARY.md  E2E_TESTING.md  E2E_TESTS.md  FRONTEND_INTEGRATION_TESTS.md  FRONTEND_TESTING.md  FRONTEND_TEST_SUMMARY.md
docs/troubleshooting/: API_INCONSISTENCIES.md  KNOWN_ISSUES.md
frontend/: .env.development  .env.docker  .env.example  .env.production  DEPLOYMENT_STATUS.md  Dockerfile  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html  lcov.info
frontend/e2e/: .gitignore  README.md  auth.spec.ts  dashboard.spec.ts  digital-human.spec.ts  generate-test-image.py  plugins.spec.ts  scheduler.spec.ts
frontend/src/: App.tsx  router.tsx
helm/openuser/: Chart.yaml  values.yaml
k8s/: api.yaml  celery.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml
monitoring/grafana/: dashboards.yml  datasources.yml
monitoring/loki/: loki-config.yml  promtail-config.yml
monitoring/prometheus/: alertmanager.yml  prometheus.yml
scripts/: README.md  deploy-docker.sh  deploy-helm.sh  deploy-k8s.sh  generate_types.py  run_performance_tests.sh
src/: __init__.py
src/api/: __init__.py  agents.py  auth.py  auth_utils.py  dependencies.py  digital_human.py  main.py  plugins.py  scheduler.py  scheduler_monitor.py  schemas.py  voice.py  websocket.py
src/core/: __init__.py  agent_manager.py  config_manager.py  plugin_config.py  plugin_dependency.py  plugin_manager.py  plugin_registry.py  redis_manager.py  self_evolving_agent.py
src/models/: __init__.py  audio_preprocessing.py  base.py  db_init.py  digital_human.py  gfpgan.py  model_manager.py  sadtalker.py  task.py  user.py  video_generator.py  voice_cloning.py  voice_synthesis.py  wav2lip.py
src/plugins/: __init__.py  audio_enhancer.py  cache_manager.py  image_processor.py  model_downloader.py  test_plugin.py  video_editor.py
src/scheduler/: __init__.py  automation.py  celery_app.py  monitor.py  schedule_manager.py  tasks.py
tests/: __init__.py  test_agents_api.py  test_auth_api.py  test_auth_utils.py  test_celery_app.py  test_digital_human_api.py  test_gfpgan.py  test_model_manager.py  test_plugins_api.py  test_sadtalker.py  test_schedule_manager.py  test_scheduler_api.py  test_scheduler_monitor_api.py  test_self_evolving_agent.py  test_task_monitor.py  test_video_generator.py  test_wav2lip.py
tests/e2e/: __init__.py  conftest.py  test_agent_flow.py  test_auth_flow.py  test_digital_human_flow.py  test_integrated_flow.py  test_plugin_flow.py  test_scheduler_flow.py
tests/integration/: test_api_contract.py
tests/integrations/: __init__.py
(+123 files in other folders)
